--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             </li> -->
         </ul>
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/moment.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
