addss new function and animation

--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 
     <div class="container">
         <header>
-            <h1>Music Game</h1>
+            <h1>Memory Game</h1>
         </header>
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
         	</ul>
 
         	<span class="moves">0</span> Moves
+            <span class="runner"></span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -30,9 +28,19 @@
         </section>
 
         <ul class="deck"></ul>
+
+        <div class="score-popup" style="display: none;">
+            <a href="#"><span class="fa fa-times close"></span></a>
+            <p>Congratulation! You won!</p>
+            <p>Total moves:  <span class="totalMoves"></span> </p>
+            <p>Time:  <span class="totalTime"></span> sec.</p>
+        </div>
+
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/moment.min.js"></script>
+    <script src="js/jquery.runner-min.js" type="text/javascript"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
